<resources>
    <string name="app_name">Project One Course App</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title">Grade Tracker</string>
    <string name="username_password">Please put your username and password</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="success">Success!</string>
    <string name="create_account">Create Account</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="username_taken">Username already exists</string>
    <string name="create_user_pass">Create your username and password</string>
    <string name="incorrect_username">Incorrect username</string>
    <string name="incorrect_password">Incorrect password, try again.</string>
    <string name="missing_user_pass">Please input username or password</string>
    <string name="add_course">Add Course</string>
    <string name="delete_course">Delete Course</string>
    <string name="enter_course_id">Enter Course ID</string>
    <string name="enter_instructor_name">Enter Instructor Name</string>
    <string name="course_hint">CST-438</string>
    <string name="instructor_hint">Dr. C</string>
    <string name="start_hint">8/24/20</string>
    <string name="start_date">Enter Start Date</string>
    <string name="end_hint">12/11/20</string>
    <string name="end_date">Enter End Date</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="course_name_hint">Software Engineering</string>
    <string name="welcome">\"Welcome, \"</string>
    <string name="no_courses">No Courses added yet</string>
    <string name="edit_user">Edit your profile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="edit_profile">What would you like to edit?</string>
    <string name="edit">Edit</string>
    <string name="add_assignment">Add Assignment</string>
    <string name="delete_assignment">Delete Assignment</string>
    <string name="assignment_details">Enter Assignment Details</string>
    <string name="assignment_max_score">Enter a Max Score</string>
    <string name="details_hint">What the assignment was about…</string>
    <string name="max_score_hint">100</string>
    <string name="assignment_earned_score">Enter Earned Score</string>
    <string name="earned_score_hint">50</string>
    <string name="assigned_date">Assigned Date</string>
    <string name="assigned_date_hint">8/24/20</string>
    <string name="due_date">Due Date</string>
    <string name="due_date_hint">9/18/20</string>
    <string name="delete_assignment_instruction">Press and hold on an assignment to delete</string>
    <string name="assignment_category">Enter Assignment Category</string>
    <string name="assignment_category_hint">HW / Quiz / Project / Exam</string>
</resources>
