<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAssignmentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_details"/>

    <EditText
        android:id="@+id/assignment_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details_hint"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_max_score"/>

    <EditText
        android:id="@+id/assignment_max_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/max_score_hint"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_earned_score"/>

    <EditText
        android:id="@+id/assignment_earned_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/earned_score_hint"
        android:inputType="number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assigned_date"/>

    <EditText
        android:id="@+id/assignment_assign_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assigned_date_hint"
        android:inputType="date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/due_date"/>

    <EditText
        android:id="@+id/assignment_due_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/due_date_hint"
        android:inputType="date"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/assignment_category"/>

    <EditText
        android:id="@+id/assignment_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignment_category_hint" />

    <Button
        android:id="@+id/add_assignment_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_assignment"/>


</LinearLayout>